# some-watcher

./: Cargo.toml  README.md
example/: main.rs
examples/: demo.rs
src/: lib.rs  ruleset.rs  watcher.rs
