[package]
name = "watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = { version = "0.5.12", default-features = false }
env_logger = { version = "0.11.3", default-features = false, features = ["color", "auto-color"] }
log = { version = "0.4.21", default-features = false }
normalize-path = "0.2.1"
notify = "7.0.0"
notify-debouncer-full = { version = "0.4.0", default-features = false , features = ["crossbeam-channel"] }
regex = "1.10.4"
